{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 61,
  "lineage": "4fca1383-c7b0-922a-43bb-23c69fa97f81",
  "resources": [
    {
      "module": "module.cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "module.cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:947342103870:security-group/sg-0ace68d01f808d7c6",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-0ace68d01f808d7c6",
            "ingress": [],
            "name": "cluster120210116090824746100000002",
            "name_prefix": "cluster1",
            "owner_id": "947342103870",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cluster1-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-058cc6a155bfcd98c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "module.cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:947342103870:security-group/sg-07b04ced13b4b958f",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-07b04ced13b4b958f",
            "ingress": [],
            "name": "cluster120210116090824737800000001",
            "name_prefix": "cluster1",
            "owner_id": "947342103870",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cluster1-eks_worker_sg",
              "kubernetes.io/cluster/cluster1": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-058cc6a155bfcd98c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "module.cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-88666314",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ace68d01f808d7c6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc",
            "module.cluster.module.eks.aws_security_group.cluster"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "module.cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-2046045602",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ace68d01f808d7c6",
            "self": false,
            "source_security_group_id": "sg-07b04ced13b4b958f",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc",
            "module.cluster.module.eks.aws_security_group.cluster",
            "module.cluster.module.eks.aws_security_group.workers"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}